...
            "state" : "translated",
            "value" : "महीनों की कवरेज"
          }
        }
      }
    },
    "More" : {
      "comment" : "A tab that opens a sheet with a list of destinations.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "एक्सपोर्ट विकल्प सेट किए जा रहे हैं और तारीख की सीमा की जांच की जा रही है।"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajustes"
          }
...
